# SPRpy

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  SPR_csv_time_extractor.py  SPR_poly_coeff_22-01-29.csv  SPR_poly_coeff_generator.m  SPRpy.py  SPRpy_classes.py  SPRpy_functions.py  SPRpy_run.py  config.toml  dash_app.py  dash_app_example.py  extract_SPR_spectra.py  fresnel_transfer_matrix.py  fresnel_transfer_matrix_manual_conversion(likely incorrect).py  pySPR.py  pySPR_classes.py  pySPR_functions.py  pyproject.toml  spr2_to_csv.py
SPRpy/: CHANGELOG.txt  CITATION.cff  DEFAULT_X_cal_values.csv  LICENSE  README.md  SPR_poly_coefficients_generator.py  SPR_poly_coefficients_generator_8channel.py  SPR_poly_coefficients_generator_v2.py  SPRpy.py  SPRpy_X_cal.py  SPRpy_X_cal_values_26-01-29_PhysicsILVES.csv  SPRpy_X_cal_values_26-01-29_PhysicsVASA.csv  SPRpy_classes.py  SPRpy_functions.py  SPRpy_spr2_to_csv.py  config.toml  config.toml.backup  config.toml.defaults  create_desktop_shortcut.py  fresnel_transfer_matrix.py  pyproject.toml  spr2_to_csv.py  spr2_to_csv_8channel.py
assets/: bootstrap_spacelab.css
