[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "SPRpy"
dynamic = ["version"]
description = 'SPRpy is an open-source project developing GUI data analysis tools for multi-parameter surface plasmon resonance measurements.  '
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = [
  { name = "John Andersson", email = "john.rickard.andersson@gmail.com" },
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Researchers",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "numpy >= 1.26.2",
  "pandas >= 2.1.4",
  "dash >= 2.14.2",
  "dash-bootstrap-components >= 1.4.2",
  "plotly >= 5.16.1",
  "scipy >= 1.11.2",
  "kaleido == 0.1.0.post1",
  "Bottleneck >= 1.3.7"]

[project.urls]
Documentation = "https://github.com/John-trailinghyphon/SPRpy#readme"
Issues = "https://github.com/John-trailinghyphon/SPRpy/issues"
Source = "https://github.com/John-trailinghyphon/SPRpy"

[tool.hatch.build.targets.sdist]
include = [
  "*.py",
  "config.toml",
  "README.md",
  "LICENSE",
  "SPR_poly_coeff_22-01-29.csv",
  "/assets",
  "/static",
]
exclude = [
  "/SPRpy sessions"
]

[tool.hatch.build.targets.wheel]
include = [
  "*.py",
  "config.toml",
  "README.md",
  "LICENSE",
  "SPR_poly_coeff_22-01-29.csv",
  "/assets",
  "/static",
]
exclude = [
  "/SPRpy sessions"
]

[tool.hatch.version]
path = "src/sprpy/__about__.py"


